# open-vernacular-ai-kit

./: .dockerignore  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  LICENSE  README.md  RELEASE.md  SECURITY.md  SUPPORT.md  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  security_report.yml
.github/workflows/: ci.yml  codeql.yml  docker.yml  docs.yml  pr-governance.yml  release.yml
.streamlit/: config.toml
demo/: README.md  streamlit_app.py
docs/: api-service.md  benchmarks.md  cli.md  config-schema.md  deploy.md  index.md  install.md  north-star-metrics.md  sdk.md  what-we-solve.md
docs/cookbook/: csv-batch.md  dialects.md  jsonl-batch.md  lexicon.md  rag.md  whatsapp.md
docs/data/: north_star_metrics_snapshot.json
eval/: run_eval.py  train_latin_lid.py
eval/datasets/: download_gujlish.py
scripts/: bench.py  snapshot_north_star_metrics.py  train_dialect_id.py  train_dialect_normalizer.py
src/gujarati_codemix_kit/: __init__.py  app_flows.py  cli.py  codemix_render.py  codeswitch.py  config.py  dialect_backends.py  dialect_datasets.py  dialect_normalizers.py  dialects.py  doctor.py  errors.py  eval_harness.py  lexicon.py  normalize.py  pipeline.py  rag.py  rag_datasets.py  rendering.py  sarvam_adapters.py  token_lid.py  transliterate.py
src/gujarati_codemix_kit/_data/: dialect_id_samples.jsonl  dialect_norm_samples.jsonl  gujarat_facts_tiny_queries.jsonl
src/open_vernacular_ai_kit/: __init__.py  api_service.py  cli.py  dialect_normalizers.py  doctor.py  eval_harness.py  language_packs.py  normalize.py  rag.py  rag_datasets.py  token_lid.py
src/open_vernacular_ai_kit/_data/: gujarat_facts_tiny_docs.jsonl  latin_lid.joblib  vernacular_facts_tiny_docs.jsonl  vernacular_facts_tiny_queries.jsonl
tests/: test_api_service.py  test_codemix.py  test_config_schema.py  test_eval_harness_language_slices.py  test_golden_whatsapp.py  test_normalize.py  test_pipeline.py  test_rendering.py  test_v0_4_dialects_codeswitch_flows.py  test_v0_5_rag_utils.py
